== Version 2.9.0 (unreleased)

Breaking changes:

Compatibility:

* Update MIME-Version to have correct case per RFC 2045 @mikel

Features:

* Updated README to improve around sending multipart mail @kapfenho
* Add delivery_interceptors method to Mail class to fetch registered interceptors @ghousemohamed

Code Improvements:

* Use Rake's default rakelib/ directory @olleolleolle
* refactor: Use Dir.glob only once in gemspec's "files" directive @olleolleolle
* Configure RSpec's zero-monkey patching mode @olleolleolle

Bug Fixes:

* Regression: Preserve message-level charset when adding parts (related to Rails ActionMailer) @shields
* Regression: Adding a part should not reset the mail's charset to nil @railsbob


Please check [2-8-stable](https://github.com/mikel/mail/blob/2-8-stable/CHANGELOG.rdoc) for previous changes.