@@ -47,7 +47,20 @@ our documentation, add new features—up to you! Thank you for pitching in.
 
 ## Compatibility
 
-Mail supports Ruby 2.5+, including JRuby and TruffleRuby.
+Mail is tested against:
+
+* Ruby: 2.5
+* Ruby: 2.6
+* Ruby: 2.7
+* Ruby: 3.0
+* Ruby: 3.1
+* JRuby: 9.2
+* JRuby: 9.3
+* JRuby: 9.4
+* JRuby: stable
+* JRuby: head
+* Truffleruby: stable
+* Truffleruby: head
 
 As new versions of Ruby are released, Mail will be compatible with support for the "preview" and all "normal maintenance", "security maintenance" and the two most recent "end of life" versions listed at the [Ruby Maintenance Branches](https://www.ruby-lang.org/en/downloads/branches/) page.  Pull requests to assist in adding support for new preview releases are more than welcome.
 
